cambio de nombre del archivo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--La primera parte del ejercicio esta completada  -->
+    <!--La primera parte del ejercicio esta completada  solo tenia que cambiar de 
+    nombre el archivo -->
     <title>Ex8</title>
 </head>
 <body>
