--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--La primera parte del ejercicio esta completada  solo tenia que cambiar de 
-    nombre el archivo -->
+    <!--realizo el archivo test y creo una nueva rama con "git branch" mas el nombre que le 
+        queramos poner a la rama, luego vamos a la  rama con "git checkout" y el nombre de la rama,
+        comprobamos que estamos en la rama test escribiendo "git branch", adjuntamos el archivo test
+        a la rama test escribiendo "git add ." y hacemos el commit con "git commit -m"-->
     <title>Ex8</title>
 </head>
 <body>
+    <header>
     <h1>EX 8</h1>
+
+    <a id="boton" href="test.html">TEST</a>
+</header>
 </body>
 </html>
