--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!--realizo el archivo test y creo una nueva rama con "git branch" mas el nombre que le 
         queramos poner a la rama, luego vamos a la  rama con "git checkout" y el nombre de la rama,
         comprobamos que estamos en la rama test escribiendo "git branch", adjuntamos el archivo test
-        a la rama test escribiendo "git add ." y hacemos el commit con "git commit -m"-->
+        a la rama test escribiendo "git add .", hacemos el commit con "git commit -m" y comprobamos
+    con "git log --oneline"-->
     <title>Ex8</title>
 </head>
 <body>
