--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--realizo el archivo test y creo una nueva rama con "git branch" mas el nombre que le 
-        queramos poner a la rama, luego vamos a la  rama con "git checkout" y el nombre de la rama,
-        comprobamos que estamos en la rama test escribiendo "git branch", adjuntamos el archivo test
-        a la rama test escribiendo "git add .", hacemos el commit con "git commit -m" y comprobamos
-    con "git log --oneline"-->
+    <!--para unir la rama al repositorio se ha de hacer algo llamado merge.
+        Lo primero es ir a la rama master con "git checkout master" y comprobamos
+        que estamos en la rama master con "git branch", despues hacemos el merge
+        con "git merge" y el nombre de la rama que en este caso es "test"-->
     <title>Ex8</title>
 </head>
 <body>
