--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--para unir la rama al repositorio se ha de hacer algo llamado merge.
-        Lo primero es ir a la rama master con "git checkout master" y comprobamos
+        Lo primero es ir a la rama master con "git checkout main" y comprobamos
         que estamos en la rama master con "git branch", despues hacemos el merge
         con "git merge" y el nombre de la rama que en este caso es "test"-->
     <title>Ex8</title>
