--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
 
     <!--para unir la rama al repositorio se ha de hacer algo llamado merge.
         Lo primero es ir a la rama master con "git checkout main" y comprobamos
